--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <div class="contenedor_productos row">
-        <!-- Inicio nav -->
+        
+
+<!-- Inicio nav -->
         <nav class="navbar navbar-expand-lg  sticky-top primerNav " id="mainnav">
           <div class="container-fluid ">
             <a href="../index.html"><img src="../img/logo.png" alt="Logo CAPIN"></a>
@@ -20,18 +22,26 @@
               <img src="../img/navbar.png" alt="icono de navbar">
             </button>
             <div class="collapse navbar-collapse " id="navbarNav" >
-              <ul class="navbar-nav ms-auto ">
+              <ul class="navbar-nav" style="font-size:115%;">
                 <li class="nav-item">
-                  <a class="nav-link " href="productos.html">Productos</a>
+                  <a class="nav-link " href="pages/productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="accesorios.html">Accesorios</a>
+                  <a class="nav-link" href="pages/accesorios.html">Carrito [xx]</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link " href="nosotros.html">Nostros</a>
+                  <a class="nav-link " href="pages/nosotros.html">Nosotros</a>
+                </li>
+              </ul>
+              <ul class="navbar-nav ms-auto" style="font-size:115%;">
+                <li class="nav-item">
+                  <a class="nav-link " href="pages/productos.html">Iniciar Sesión</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link " href="contacto.html">Contacto</a>
+                  <a class="nav-link" href="pages/accesorios.html">Registrarse</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="pages/accesorios.html">[Nombre de usuario]</a>
                 </li>
               </ul>
             </div>
@@ -39,7 +49,14 @@
         </nav>      
         <!-- Cierre nav -->
 
-
+        <!-- Inicio header -->
+        <header id="header">
+            <div class="header_pro">
+                <h1>Accesorios</h1>
+            </div>
+        
+        </header>
+        <!-- Cierre header -->
 
 
     <!-- Inicio Main -->
