--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -28,7 +28,7 @@
                   <a class="nav-link" href="accesorios.html">Accesorios</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link " href="nosotros.html">Nostros</a>
+                  <a class="nav-link " href="nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link " href="contacto.html">Contacto</a>
